unhide how to work with Array elements

--- a/Language/list.pod
+++ b/Language/list.pod
@@ -487,4 +487,13 @@ a mutable container that knows the difference between values and Scalar-wrapped
 values is needed, or for very large Arrays where a native-typed array cannot be used.
 Such a creature should never be passed back to unsuspecting users.
 
+=head1 Working with Elements
+
+To test for elements convert the C<List> or C<Array> to a L<C<Set>|/Type/Set>
+or use a Set L<operator|/language/setbagmix>.
+
+    my @a = <foo bar buzz>;
+    say @a.Set<bar buzz>; # OUTPUT«(True True)␤»
+    say so 'bar' ∈ @a;    # OUTPUT«True␤»
+
 =end pod
