--- a/Type/Supply.pod
+++ b/Type/Supply.pod
@@ -148,18 +148,16 @@ the GUI thread.
 Waits until the supply is done (in which case it returns C<True>) or C<quit>
 (in which case it will throw the exception that was passed to C<quit>).
 
-    my $s = Supply.new;
-    $s.tap(&say);
-    my $p = Promise.allof((^10).pick(*).map: -> $v {
-        start {
-            $s.emit($v)
-        }
-    });
-    $p.then({ $s.done });
-
-    $s.wait;
-    say "Done";
-    await $p;
+   my $s = Supplier.new;
+   start {
+     sleep 1;
+     say "One second: running.";
+     sleep 1;
+     $s.emit(42);
+     $s.done;
+   }
+   $s.Supply.wait;
+   say "Two seconds: done";
 
 =head2 method list
 
