replace Supply.new in grep and map
Also, emit() is called on a Supplier rather than Supply.

--- a/Type/Supply.pod
+++ b/Type/Supply.pod
@@ -246,10 +246,11 @@ the interval tock, and is incremented by one for each value emitted.
 Creates a new supply that only emits those values from the original supply
 that smart-match against C<$test>.
 
-    my $all  = Supply.new;
-    my $ints = $all.grep(Int);
+    my $supplier = Supplier.new;
+    my $all      = $supplier.Supply;
+    my $ints     = $all.grep(Int);
     $ints.tap(&say);
-    $all.emit($_) for 1, 'a string', 3.14159;   # prints only 1
+    $supplier.emit($_) for 1, 'a string', 3.14159;   # prints only 1
 
 =head2 method map
 
@@ -258,10 +259,11 @@ that smart-match against C<$test>.
 Returns a new supply that maps each value of the given supply through
 C<&mapper> and emits it to the new supply.
 
-    my $all    = Supply.new;
-    my $double = $all.map(-> $value { $value * 2 });
+    my $supplier = Supplier.new
+    my $all      = $supplier.Supply;
+    my $double   = $all.map(-> $value { $value * 2 });
     $double.tap(&say);
-    $all.emit(4);           # 8
+    $supplier.emit(4);           # 8
 
 =head2 method batch
 
