better heading, fix link, move to a better place

--- a/Language/list.pod
+++ b/Language/list.pod
@@ -69,6 +69,15 @@ list in order and stopping after the last element:
 
     for 1,2,3 { .say } # says 1, then says 2, then says 3
 
+=head1 Testing for Elements
+
+To test for elements convert the C<List> or C<Array> to a L<C<Set>|/type/Set>
+or use a Set L<operator|/language/setbagmix>.
+
+    my @a = <foo bar buzz>;
+    say @a.Set<bar buzz>; # OUTPUT«(True True)␤»
+    say so 'bar' ∈ @a;    # OUTPUT«True␤»
+
 =head2 Sequences
 
 Not all lists are born full of elements.  Some only create as many elements
@@ -486,14 +495,5 @@ expect surprises with built-in functions.  The only time this would be done is i
 a mutable container that knows the difference between values and Scalar-wrapped
 values is needed, or for very large Arrays where a native-typed array cannot be used.
 Such a creature should never be passed back to unsuspecting users.
-
-=head1 Working with Elements
-
-To test for elements convert the C<List> or C<Array> to a L<C<Set>|/Type/Set>
-or use a Set L<operator|/language/setbagmix>.
-
-    my @a = <foo bar buzz>;
-    say @a.Set<bar buzz>; # OUTPUT«(True True)␤»
-    say so 'bar' ∈ @a;    # OUTPUT«True␤»
 
 =end pod
