mention quietly block

--- a/Language/5to6-nutshell.pod
+++ b/Language/5to6-nutshell.pod
@@ -930,7 +930,8 @@ Strict mode is now on by default.
 
 Warnings are now on by default.
 
-(XXX C<no warnings> will work someday, but NYI?)
+C<no warnings> is currently NYI, but putting things in a quietly {} block
+will silence.
 
 =head3 C<autodie>
 
