--- a/Type/Tap.pod
+++ b/Type/Tap.pod
@@ -57,7 +57,7 @@ Returns the supply to which the tap belongs.
 
 =head2 method close
 
-    method closing(Tap:D:)
+    method close(Tap:D:)
 
 Closes the tap.
 
