Improve example in type conversion
also undocument UNBASE, since it is internal. We should
rather think about a better API for that.

--- a/Type/Real.pod
+++ b/Type/Real.pod
@@ -76,16 +76,10 @@ The final digit produced is always rounded.
 
     say pi.base(10, 5);     # 3.14159
 
-To convert a string to a number use the C<:16($number)> notation where 16 is
+To convert a string to a number use the C<:16($string)> notation where 16 is
 the base:
 
     say :16("FF")           # 255
     say :23("FF")           # 360
-
-Converting to a dynamic base requires the Rakudo internal function
-C<UNBASE()>:
-
-    my $base = 23;
-    say UNBASE($base, "FF") # 360
 
 =end pod
