List: add example to classify to split a list based on condition

--- a/Type/List.pod
+++ b/Type/List.pod
@@ -418,6 +418,14 @@ Example:
     say ('hello', 1, 22/7, 42, 'world').classify: { .Str.chars };
         #-> 1 => 1, 2 => 42, 5 => hello world, 8 => 3.142857
 
+C<classify> can also be used to partition a list into two lists by using a
+predicate. The first list contains all items matching the predicate, the
+second the rest (note the usage of C<:=>):
+
+    my (@even, @odd) := (1, 7, 6, 3, 2).classify({ $_ %% 2 }).{True, False};
+    say @even; # 6 2
+    say @odd;  # 1 7 3
+
 =head2 method Bool
 
 Defined as:
