nativecall: add DESTROY to example

--- a/Language/nativecall.pod
+++ b/Language/nativecall.pod
@@ -142,6 +142,11 @@ by writing a class like this:
                 $!initialized = False; # prevent double frees
             }
         }
+
+        # Free data when the object is garbage collected.
+        method DESTROY() {
+            self.free;
+        }
     }
 
 Note that the CPointer representation can do nothing more than hold a C pointer.
