META6.info -> META6.json

--- a/Language/modules-extra.pod
+++ b/Language/modules-extra.pod
@@ -23,7 +23,7 @@ of a module.
 Some tests related modules
 
 
-=item L<Test::META|http://modules.perl6.org/dist/Test::META>      Test your META6.info file
+=item L<Test::META|http://modules.perl6.org/dist/Test::META>      Test your META6.json file
 =item L<Test::Output|http://modules.perl6.org/dist/Test::Output>  Test the output to STDOUT and STDERR your program generates
 =item L<Test::Screen|http://modules.perl6.org/dist/Proc::Screen>  Use B<GNU screen> to test fullscreen VT applications
 
