IO::Path: document slurp and spurt methods

--- a/Type/IO/Path.pod
+++ b/Type/IO/Path.pod
@@ -189,9 +189,20 @@ A lazy way to find the first three files ending in ".p6" recursively starting fr
         @stack.append(dir($current)>>.path) if $current.IO.d;
     }
     
-    
     say $perl-files[1..3];
 
+=head2 routine slurp
+
+    multi method slurp(IO::Path:D: :$bin, :$enc);
+
+Return the file content for this path, like L<slurp|/routine/slurp>.
+
+=head2 routine spurt
+
+    multi method spurt(IO::Path:D: Blob $contents, :$bin, |c);
+    multi method spurt(IO::Path:D: Cool $contents, :$bin, |c);
+
+Write C<$contents> to this path, like L<spurt|/routine/spurt>.
 
 =head2 routine chdir
 
