Language/subscripts: add "or" as alternative in :exists example

--- a/Language/subscripts.pod
+++ b/Language/subscripts.pod
@@ -377,6 +377,7 @@ require you to add parens in compound expressions:
 
     if $foo || %hash<key>:exists { ... }    # WRONG, tries to adverb the || op
     if $foo || (%hash<key>:exists) { ... }  # correct
+    if $foo or %hash<key>:exists { ... }    # also correct
 
 The supported adverbs are:
 
