--- a/Type/Channel.pod
+++ b/Type/Channel.pod
@@ -6,8 +6,11 @@
 
     class Channel { ... }
 
-A Channel is a thread-safe queue that helps you to send a series of objects from
-one or more producers to one or more consumers.
+A C<Channel> is a thread-safe queue that helps you to send a series of objects from
+one or more producers to one or more consumers.  Each object will arrive at only
+one such consumer, selected by the scheduler.  If there is only one consumer
+and one producer, order of objects is guaranteed to be preserved.  Sending on a
+C<Channel> is non-blocking.
 
     my $c = Channel.new;
     await (^10).map: {
@@ -34,8 +37,11 @@ Usage:
 
     CHANNEL.send(ITEM)
 
-Enqueues an item into the channel. Throws an exception of type
+Enqueues an item into the C<Channel>. Throws an exception of type
 L<X::Channel::SendOnClosed> if the channel has been closed already.
+This call will B<not> block waiting for a consumer to take the object.
+There is no set limit on the number of items that may be queued, so
+care should be taken to prevent runaway queueing.
 
 =head2 method receive
 
@@ -87,9 +93,11 @@ Usage:
 
     CHANNEL.close
 
-Close the channel. This makes subsequent C<send> calls die, as well as a
-C<receive> call past the end of the queue,
-and is a prerequisite for C<list> to terminate.
+Close the C<Channel>, normally.  This makes subsequent C<send> calls die with
+L<X::Channel::SendOnClosed>.  Subsequent calls of C<.receive> may still drain
+any remaining items that were previously sent, but if the queue is empty, will
+throw an L<X::Channel::ReceiveOnClosed> exception.  A C<Seq> produced by an
+C<@()> or by the C<.list> method will not terminate until this has been done.
 
 =head2 method list
 
@@ -101,8 +109,9 @@ Usage:
 
     CHANNEL.list
 
-Returns a list of all remaining items in the queue, and removes them from the
-channel. This can only terminate once C<close> has been called.
+Returns a C<Seq> which will iterate items in the queue and removes each item
+from the queue as it iterates. This can only terminate once the C<close> method
+has been called.
 
 =head2 method closed
 
@@ -127,9 +136,10 @@ Usage:
 
     CHANNEL.fail
 
-Closes the channel (that is, makes subsequent C<send> calls die), and enqueues
-the error as the final element in the channel. Method C<receive> will throw
-the error as an exception.
+Closes the C<Channel> (that is, makes subsequent C<send> calls die), and enqueues
+the error to be thrown as the final element in the channel. Method C<receive>
+will throw that error as an exception.  Does nothing if the channel has already
+been closed or C<.fail> has already been called on it.
 
 =head2 method Supply
 
