Str: split: use .perl in examples
Shows the exact return value (Str vs. Int) and makes it clear when empty
strings are returned.

--- a/Type/Str.pod
+++ b/Type/Str.pod
@@ -254,19 +254,21 @@ Also return the B<index> of the delimiter and the delimiter as a C<Pair>.
 Examples:
 
 =begin code
-    say split(";", "a;b;c")            # (a b c)
-    say split(";", "a;b;c", :v)        # (a ; b ; c)
-    say split(";", "a;b;c", 2)         # (a b;c)
-    say split(";", "a;b;c", 2, :v)     # (a ; b;c)
-    say split(";", "a;b;c,d")          # (a b c,d)
-    say split(/\;/, "a;b;c,d")         # (a b c,d)
-    say split(<; ,>, "a;b;c,d")        # (a b c d)
-    say split(/<[;,]>/, "a;b;c,d")     # (a b c d)
-    say split(<; ,>, "a;b;c,d", :k)    # (a 0 b 0 c 1 d)
-    say split(<; ,>, "a;b;c,d", :kv)   # (a 0 ; b 0 ; c 1 , d)
 
-    say "abcde".split("")              # ( a b c d e )
-    say "abcde".split("",:skip-empty)  # (a b c d e)
+    say split(";", "a;b;c").perl            # ("a", "b", "c")
+    say split(";", "a;b;c", :v).perl        # ("a", ";", "b", ";", "c")
+    say split(";", "a;b;c", 2).perl         # ("a", "b;c").Seq
+    say split(";", "a;b;c", 2, :v).perl     # ("a", ";", "b;c")
+    say split(";", "a;b;c,d").perl          # ("a", "b", "c,d")
+    say split(/\;/, "a;b;c,d").perl         # ("a", "b", "c,d")
+    say split(<; ,>, "a;b;c,d").perl        # ("a", "b", "c", "d")
+    say split(/<[;,]>/, "a;b;c,d").perl     # ("a", "b", "c", "d")
+    say split(<; ,>, "a;b;c,d", :k).perl    # ("a", 0, "b", 0, "c", 1, "d")
+    say split(<; ,>, "a;b;c,d", :kv).perl   # ("a", 0, ";", "b", 0, ";", "c", 1, ",", "d")
+
+    say "abcde".split("").perl              # ("", "a", "b", "c", "d", "e", "")
+    say "abcde".split("",:skip-empty).perl  # ("a", "b", "c", "d", "e")
+
 =end code
 
 =head2 routine comb
