Str: split: add splitting the empty string as example

--- a/Type/Str.pod
+++ b/Type/Str.pod
@@ -266,6 +266,9 @@ Examples:
     say split(<; ,>, "a;b;c,d", :k).perl    # ("a", 0, "b", 0, "c", 1, "d")
     say split(<; ,>, "a;b;c,d", :kv).perl   # ("a", 0, ";", "b", 0, ";", "c", 1, ",", "d")
 
+    say "".split("x").perl                  # ("",)
+    say "".split("x", :skip-empty).perl     # ("",)
+
     say "abcde".split("").perl              # ("", "a", "b", "c", "d", "e", "")
     say "abcde".split("",:skip-empty).perl  # ("a", "b", "c", "d", "e")
 
