operators: fix typo in reference

--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -805,7 +805,7 @@ Integer bit shift to the right.X<|integer bit shift operator, right>
 
     multi sub infix:<gcd>($a, $b) returns Int:D
 
-Coerces both arguments to L<Int> and returns the greatest common denominator.X<|greatest commmon demnominator operator>
+Coerces both arguments to L<Int> and returns the greatest common denominator.X<|greatest common denominator operator>
 
 =head2 infix C«lcm»
 
