--- a/Language/regexes.pod
+++ b/Language/regexes.pod
@@ -790,7 +790,7 @@ case-insensitive:
     $_ = 'STAR TREK Into Darkness';
     s/Trek Into/TREK\: Into/;       # Someone forgot the colon?
     .say;                           # STAR TREK Into Darkness
-    s:/Trek into/TREK\: Into/;      # Thereifixedit
+    s:i/Trek into/TREK\: Into/;     # Thereifixedit
     .say;                           # STAR TREK: Into Darkness
 
 If you want more in-depth descriptions of what these adverbs are actually
