Removed whitespace warning from regex example

--- a/Language/regexes.pod
+++ b/Language/regexes.pod
@@ -788,9 +788,9 @@ match C<'foo'> and not C<'Foo'>.  The C<:i> adverb makes matching
 case-insensitive:
 
     $_ = 'STAR TREK Into Darkness';
-    s/Trek Into/TREK\: Into/;       # Someone forgot the colon?
+    s/'Trek Into'/TREK\: Into/;     # Someone forgot the colon?
     .say;                           # STAR TREK Into Darkness
-    s:i/Trek into/TREK\: Into/;     # Thereifixedit
+    s:i/'Trek into'/TREK\: Into/;   # Thereifixedit
     .say;                           # STAR TREK: Into Darkness
 
 If you want more in-depth descriptions of what these adverbs are actually
