Added missing output comment in regex pod

--- a/Language/regexes.pod
+++ b/Language/regexes.pod
@@ -404,7 +404,7 @@ string of non-whitespace characters.
 In regexes branches separated by C<|>, the longest match wins, independent of
 the lexical ordering in the regexes.
 
-    say ('abc' ~~ / a | .b /).Str;
+    say ('abc' ~~ / a | .b /).Str;    # ab
 
 =head1 Anchors
 
@@ -630,7 +630,7 @@ the match object as a hash, in other words: C<$/{ 'myname' }> or C<< $/<myname> 
 Named captures can also be nested using regular capture group syntax:
 
     if 'abc-abc-abc' ~~ / $<string>=( [ $<part>=[abc] ]* % '-' ) / {
-        say ~$<string> # abc-abc-abc
+        say ~$<string>       # abc-abc-abc
         say ~$<string><part> # [abc, abc, abc]
     }
 
