Fixed wrong operator
The sample definition for "~" was the same as that for "-"

--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -689,7 +689,7 @@ and then negates the result.
 
 =head2 prefix C«~»
 
-    multi sub prefix:<->(Any) returns Str:D
+    multi sub prefix:<~>(Any) returns Str:D
 
 X<String context operator>.
 
