Doc per-clone behavior of state/once and mention not threadsafe

--- a/Language/control.pod
+++ b/Language/control.pod
@@ -691,6 +691,14 @@ loop or a recursive routine.
         print 'many' 
     } # OUTPUT«once␤manymanymany»
 
+This works per "clone" of the containing code object, so:
+
+    ({ once 42.say } xx 3).map: {$_(), $_()}; # says 42 thrice
+
+Note that this is B<not> a thread-safe construct when the same clone of the same
+block is run by multiple threads.  Also remember that methods only have one
+clone per class, not per object.
+
 =head1 X<quietly|control flow>
 
 A C<quietly> block will suppress warnings.
