--- a/Language/variables.pod
+++ b/Language/variables.pod
@@ -538,6 +538,14 @@ sub a {
 
 say a for 1..6;
 
+This works per "clone" of the containing code object, so:
+
+    ({ state $i = 1; $i++.say; } xx 3).map: {$_(), $_()}; # says 1 then 2 thrice
+
+Note that this is B<not> a thread-safe construct when the same clone of the same
+block is run by multiple threads.  Also remember that methods only have one
+clone per class, not per object.
+
 =end code
 
 will continue to increment C<$l> and append it to C<@x> each time it is
