Make 5to6 docs for @INC/%INC slightly better

--- a/Language/5to6-perlvar.pod
+++ b/Language/5to6-perlvar.pod
@@ -179,19 +179,17 @@ and <-F> command-line switches are not yet implemented in rakudo.
 
 =item @INC
 
-[NEEDS FURTHER RESEARCH] If you've been following along, it will
-probably not surprise you that this is C<@*INC> in Perl 6. The Perl 6
-docs say "Each repository is represented as an object with the
-CompUnitRepo interface in the @*INC array" which could probably use some
-further explanation. With the version of rakudo star I'm working with,
-each directory is prefixed with either C<file#> or C<inst#>. Presumably
-this will become clear when documentation for CompUnitRepo shows up.
+No longer exists in Perl 6.  Please use "use lib" to manipulate the
+module repositories to be searched.  The closest thing to @INC is
+really $*REPO.  But that works completely differently from @INC mostly
+because of the precompilation capabilities of Perl 6.
 
 =item %INC
 
-[NEEDS FURTHER RESEARCH] No longer exists. S28 says it is "encapsulated
-in CompUnitRepo object" which, as with C<@INC> raises the question of
-what that means.
+No longer exists in Perl 6.  Because each Repository is responsible for
+remembering which modules have been loaded already, it's up to each
+Repository to expose this knowledge if necessary.  To date, there is no
+generic API for this.
 
 =item $INPLACE_EDIT
 
