--- a/Type/Array.pod
+++ b/Type/Array.pod
@@ -200,7 +200,9 @@ Returns the shape of the array as a list.
 
 Example:
 
-    my @foo[2;3] = ( < 1 2 3 >, < 4 5 6 > );
+    my @foo[2;3] = ( < 1 2 3 >, < 4 5 6 > ); # Array with fixed dimensions
     say @foo.shape; # (2 3)
+    my @bar = ( < 1 2 3 >, < 4 5 6 > ); # Normal array (of arrays)
+    say @bar.shape; # (*)
 
 =end pod
