5to6: Gave examples of how @INC and %INC in p6
or the closest p6 equivalent at least.

--- a/Language/5to6-perlvar.pod
+++ b/Language/5to6-perlvar.pod
@@ -184,12 +184,18 @@ module repositories to be searched.  The closest thing to @INC is
 really $*REPO.  But that works completely differently from @INC mostly
 because of the precompilation capabilities of Perl 6.
 
+     # Print out a list of compunit repositories
+     .say for $*REPO.repo-chain;
+
 =item %INC
 
 No longer exists in Perl 6.  Because each Repository is responsible for
-remembering which modules have been loaded already, it's up to each
-Repository to expose this knowledge if necessary.  To date, there is no
-generic API for this.
+remembering which modules have been loaded already. You can get a list
+of all loaded modules (compilation units) like so:
+
+    use Test;
+    use MyModule;
+    say flat $*REPO.repo-chain.map(*.loaded); #-> (MyModule Test)
 
 =item $INPLACE_EDIT
 
