add whitespace to code sample

--- a/Language/control.pod
+++ b/Language/control.pod
@@ -758,7 +758,10 @@ conditional again.
 
 =begin code
 
-{ my $x = prompt("Enter a number"); redo unless is_a_number($x) }
+{
+    my $x = prompt("Enter a number");
+    redo unless is_a_number($x)
+}
 
 =end code
 
