Correct link to compile-time variables. This fixes #417

--- a/Language/variables.pod
+++ b/Language/variables.pod
@@ -247,7 +247,8 @@ Although they may not be changed at runtime, the user is allowed to
     constant $?TABSTOP = 4; # this causes leading tabs in a heredoc or in a POD
                             # block's virtual margin to be counted as 4 spaces.
 
-For a list of these special variables see L<#Compile-time variables>.
+For a list of these special variables see
+L<compile-time variables|/language/variables#Compile-time_variables>.
 
 =head2 The C<.> Twigil
 
