describe how to invoke function pointers

--- a/Language/nativecall.pod
+++ b/Language/nativecall.pod
@@ -162,6 +162,23 @@ better type safety and more readable code.
 
 Once again, type objects are used to represent nulls.
 
+=head1 Function Pointers
+
+C libraries can expose pointers to C functions as return values of functions and as
+members of Structures like e.g. structs and unions.
+
+Example of invoking a function pointer "$fptr" returned by a function "f", using sub "def"
+as definition of the desired function signature and return value:
+
+    sub f() returns Pointer is native('mylib') { * }
+    my $fptr = f();
+
+    sub def() returns int32 is native('mylib') { * }
+
+    my &newfunc = nativecast(&def, $fptr);
+
+    say newfunc();
+
 =head1 Arrays
 
 NativeCall has some support for arrays. It is constrained to work with machine-size
