Document the can-ok() test function

--- a/Language/testing.pod
+++ b/Language/testing.pod
@@ -198,6 +198,24 @@ string.  The function accepts an optional C<$description> of the test.
     isa-ok $womble, Womble, "Great Uncle Bulgaria is a womble";
     isa-ok $womble, 'Womble';     # equivalent
 
+=head2 By method name
+
+=item X<can-ok($variable, $method-name, $description?)|can-ok>
+
+Marks a test as passed if the given C<$variable> can run the given
+C<$method-name>.  The function accepts an optional C<$description>.  For
+instance:
+
+    my $womble = Womble.new;
+
+    # with automatically generated test description
+    can-ok $womble 'collect-rubbish';
+    #  => An object of type 'Womble' can do the method 'collect-rubbish'
+
+    # with human-generated test description
+    can-ok $womble 'collect-rubbish', "Wombles can collect rubbish";
+    #  => Wombles can collect rubbish
+
 =head2 By regex
 
 =item X<like($value, $expected-regex, $description?)|like>
