Document the does-ok() test function

--- a/Language/testing.pod
+++ b/Language/testing.pod
@@ -216,6 +216,32 @@ instance:
     can-ok $womble 'collect-rubbish', "Wombles can collect rubbish";
     #  => Wombles can collect rubbish
 
+=head2 By role
+
+=item X<does-ok($variable, $role, $description?)|does-ok>
+
+Marks a test as passed if the given C<$variable> can do the given C<$role>.
+The function accepts an optional C<$description> of the test.
+
+    # create a Womble who can invent
+    role Invent {
+        method brainstorm { say "Aha!" }
+    }
+    class Womble {}
+    class Tobermory is Womble does Invent {}
+
+    # ... and later in the tests
+    use Test;
+
+    my $tobermory = Tobermory.new;
+
+    # with automatically generated test description
+    does-ok $tobermory, Invent;
+    #  => The object does role Type
+
+    does-ok $tobermory, Invent, "Tobermory can invent";
+    #  => Tobermory can invent
+
 =head2 By regex
 
 =item X<like($value, $expected-regex, $description?)|like>
