Add missing commas for can-ok

--- a/Language/testing.pod
+++ b/Language/testing.pod
@@ -209,11 +209,11 @@ instance:
     my $womble = Womble.new;
 
     # with automatically generated test description
-    can-ok $womble 'collect-rubbish';
+    can-ok $womble, 'collect-rubbish';
     #  => An object of type 'Womble' can do the method 'collect-rubbish'
 
     # with human-generated test description
-    can-ok $womble 'collect-rubbish', "Wombles can collect rubbish";
+    can-ok $womble, 'collect-rubbish', "Wombles can collect rubbish";
     #  => Wombles can collect rubbish
 
 =head2 By role
