Add a missing semicolon

--- a/Type/Hash.pod
+++ b/Type/Hash.pod
@@ -289,6 +289,6 @@ The adverbs C<:v> and C<:k> return the key or value or a list their of.
 
 	my %h = a => 1, b => 2;	
 	say %h<a>:k;   # a
-	say %h<a b>:k  # (a b)
+	say %h<a b>:k;  # (a b)
 
 =end pod
