Pipeline is something I hallucinated -- should be feed

--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -1897,10 +1897,10 @@ Short-circuits.
 
 =head2 infix C«==>»
 
-This X<pipeline> operator takes the result from the left and passes it as the
+This X<feed> operator takes the result from the left and passes it as the
 last parameter to the right. This allows for a more natural left-to-right data
 flow similar to method chaining, but can be used with functions that are not
-methods of the data in the pipeline.
+methods of the data in each step.
 
     # Traditional structure, read bottom-to-top
     my @result =
@@ -1909,7 +1909,7 @@ methods of the data in the pipeline.
         map { .tc },       # (2) Capitalize the words
         <people of earth>; # (1) Start with the input
 
-    # Pipeline (left-to-right), read top-to-bottom
+    # Feed (left-to-right), read top-to-bottom
     my @result =
         <people of earth> # (1) Start with the input
         ==> map { .tc }   # (2) Capitalize the words
@@ -1925,7 +1925,7 @@ methods of the data in the pipeline.
 
 =head2 infix C«<==»
 
-This X<leftward pipeline> operator takes the result from the right and passes
+This X<leftward feed> operator takes the result from the right and passes
 it as the last parameter to the left. This makes visible the right-to-left
 dataflow for a series of list manipulating functions.
 
@@ -1936,7 +1936,7 @@ dataflow for a series of list manipulating functions.
         map { .tc },       # (2) Capitalize the words
         <people of earth>; # (1) Start with the input
 
-    # Pipeline (right-to-left), read bottom-to-top
+    # Feed (right-to-left), read bottom-to-top
     my @result =
         sort                   # (4) Sort, result is <Earth People>
         <== grep { /<[PE]>/ }, # (3) Look for P or E
