Add an explanation of usefulness of feed operators

--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -1898,10 +1898,7 @@ Short-circuits.
 =head2 infix C«==>»
 
 This X<feed> operator takes the result from the left and passes it to the
-next (right) routine as the last parameter. This allows
-for a more natural left-to-right data flow similar to method chaining, but
-gives you the freedom to use something other than methods directly available
-to the data (the result of a bare routine or an unrelated data's method).
+next (right) routine as the last parameter.
 
 The precedence is very loose so you will need to use parentheses to
 assign the result or you can even just use another feed operator! In the
@@ -1938,13 +1935,21 @@ is not required for the very last routine/method).
         ==> sort()
         ==> my @result;
 
-    # It can be useful to capture a partial result
+    # It can be useful to capture a partial result, however, unlike
+    # the leftward feed operator, it does require parentheses or a semicolon
     <people of earth>
         ==> map({ .tc })
         ==> my @caps; @caps # also could wrap in parentheses instead
         ==> grep /<[PE]>/
         ==> sort()
         ==> my @result;
+
+The feed operator lets you construct method-chaining-like patterns out of
+routines and the results of methods on unrelated data.  In method-chaining,
+you are restricted to the methods available on the data or the result of
+previous method call.  With feed operators, that restriction is gone.
+The resulting code could also be seen to be more readable than a series of
+method calls broken over multiple lines.
 
 =head2 infix C«<==»
 
@@ -1983,6 +1988,13 @@ functions.
         <== map({ .tc })
         <== <people of earth>;
 
+Unlike the rightward feed operator, the result is not closely mappable
+to method-chaining.  However, compared to the traditional structure above
+where each argument is separated by a line, the resulting code is more
+demonstrative than commas.  The leftward feed operator also allows you
+to "break into" the statement and capture an intermediary result which
+can be extremely useful for debugging or to take that result and create
+another variation on the final result.
 
 =end pod
 
