Add mention of eventual parallelizing superpowers

--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -1951,6 +1951,11 @@ previous method call.  With feed operators, that restriction is gone.
 The resulting code could also be seen to be more readable than a series of
 method calls broken over multiple lines.
 
+Note: In the future, this operator will see some change as it gains the
+ability to run list operations in parallel. It will enforce that the
+B<left> operand is enclosable as a closure (that can be cloned and run in
+a subthread).
+
 =head2 infix C«<==»
 
 This X<leftward feed> operator takes the result from the right and passes
@@ -1995,6 +2000,11 @@ demonstrative than commas.  The leftward feed operator also allows you
 to "break into" the statement and capture an intermediary result which
 can be extremely useful for debugging or to take that result and create
 another variation on the final result.
+
+Note: In the future, this operator will see some change as it gains the
+ability to run list operations in parallel. It will enforce that the
+B<right> operand is enclosable as a closure (that can be cloned and run in
+a subthread).
 
 =end pod
 
