A few spelling adjustments

--- a/Language/operators.pod
+++ b/Language/operators.pod
@@ -1902,7 +1902,7 @@ next (right) routine as the last parameter.
 
 The precedence is very loose so you will need to use parentheses to
 assign the result or you can even just use another feed operator! In the
-case of routines/methods that take a single argument or the first argument
+case of routines/methods that take a single argument or where the first argument
 is a block, it is often required that you call with parentheses (though this
 is not required for the very last routine/method).
 
@@ -1989,7 +1989,7 @@ functions.
     my @result
         <== sort()
         <== grep({ /<[PE]>/ })
-        <== my @caps # unlike <==, there is no need for addtl. statement
+        <== my @caps # unlike <==, there is no need for additional statement
         <== map({ .tc })
         <== <people of earth>;
 
