Describe greedy vs frugal modifiers in regexes

--- a/Language/regexes.pod
+++ b/Language/regexes.pod
@@ -378,6 +378,24 @@ occur between each of the matches.  So, for example C<a+ % ','> will match
 C<a> or C<a,a> or C<a,a,a> or so on, but it will not match C<a,> or C<a,a,>.
 To match those as well, you may use C<%%> instead of C<%>.
 
+=head2 X<Greedy versus frugal quantifiers: ! and ?>
+
+By default, quantifiers request a greedy match:
+
+=begin code
+    'abababa' ~~ /a .* a/ && say ~$/;  # abababa
+=end code
+
+You can attach a C<?> modifier to the quantifier to enable frugal
+matching:
+
+=begin code
+    'abababa' ~~ /a .* a/ && say ~$/;  # abababa
+    'abababa' ~~ /a .*? a/ && say ~$/; # aba
+=end code
+
+You can also explicitly request greedy matching with the C<!> modifier.
+
 =head1 X<Alternation|regex,||>
 
 To match one of several possible alternatives, separate them by C<||>; the
